# Blankie

./: .gitignore  README.md  blankie  blankie-nix  config-my.bash  config-my.py  flake.nix  pyproject.toml  requirements.txt  setup.py  xss  xssmgr
lib/: Xlib_ext_screensaver.py  xss
lib/modules/: dpms.bash  dpms.py  dunst.py  i3lock.bash  i3lock.py  power.bash  power.py  upower.bash  upower.py  xbacklight.bash  xkbmap.bash  xkbmap.py
modules/: dpms.bash  dunst.bash  i3lock.bash  physlock.bash  power.bash  upower.bash  xbacklight.bash
src/blankie/: __init__.py  __main__.py  config.py  daemon.py  logging.py  module.py  server.py  session.py  xss_helper.py
src/blankie/modules/: bus_client.py  bus_server.py  dbus.py  dpms.py  dunst.py  glib.py  i3lock.py  lock.py  logind.py  physlock.py  physlock_vtswitch.py  power.py  remote_receiver.py  remote_sender.py  server.py  timer.py  tty_idle.py  upower.py  xbacklight.py  xkbmap.py  xset.py  xss.py
src/blankie/modules/session/: remote.py  tty.py  wake_lock.py  x11.py
src/xssmgr/: __init__.py  __main__.py  config.py  daemon.py  fifo.py  logging.py  module.py  modules.py  server.py  session.py  sessions.py  util.py
src/xssmgr/modules/: __init__.py  dpms.py  dunst.py  fifo.py  i3lock.py  lock.py  physlock.py  physlock_vtswitch.py  power.py  server.py  timer.py  tty_idle.py  upower.py  vlock.py  xbacklight.py  xkbmap.py  xset.py  xss.py
src/xssmgr/modules/session/: console.py  tty.py  x11.py
tests/: conftest.py  test_cli.py  test_harness.py  test_idle.py  test_server.py
